user endpoint documentation
